Edited conclusion halfway and applied grammarly fully for intro and conclusion

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -7,7 +7,7 @@
 
         \paragraph
         Recent years have seen a rise in the popularity of payload transportation with \glspl{UAV} \cite{Nakamura2019}.
-        These payloads are usually categorised as either a sensor, or freight \cite{Vergouw2016}.
+        These payloads are usually categorised as either a sensor or freight \cite{Vergouw2016}.
         Sensors like cameras or meteorological instruments can be carried by a \glspl{UAV} for aerial photography or surveying.
         Payloads carried as freight include pesticides sprayed over agricultural land, medical parcels carried to remote areas or consumer deliveries.
     
@@ -20,16 +20,16 @@
         \paragraph
         Multirotor \glspl{UAV} are commonly used for payload transportation tasks due to their hover and \gls{VTOL} abilities.
         In some applications, a payload is rigidly attached to the \gls{UAV}.
-        The flying characteristics of multirotors also allow them to transport suspended payloads, which is useful for arbitrarily shaped payload or for delivering payloads without landing.
+        The flying characteristics of multirotors also allow them to transport suspended payloads, which is useful for arbitrarily shaped payloads or for delivering payloads without landing.
         In this configuration, the payload is suspended below the vehicle with a cable and the payload is free to swing during flight.
         This oscillatory motion affects the flight dynamics of the multirotor and makes stabilised control a challenging task.
         
         \paragraph
         Control becomes even more difficult with increased uncertainty of the payload dynamics.
-        In some application the payload dynamics are well known and constant, hence a controller can be designed based on an accurate predermined model of the dynamics.
+        In some applications the payload dynamics are well known and constant, hence a controller can be designed based on an accurate predetermined model of the dynamics.
         However, package delivery applications often involve uncertainty of the payload parameters.
         Specific payloads such as elongated payloads or fluid containers add even more uncertainty to the system by inducing interesting dynamics which are also unknown before a flight.
-        This significantly effects the flight dynamics of a multirotor and the controller may need to account for this uncertainty for effective control.
+        This significantly affects the flight dynamics of a multirotor and the controller may need to account for this uncertainty for effective control.
 
         \paragraph
         In summary, multirotor payload transportation is becoming increasingly popular.
@@ -73,7 +73,7 @@
         Chapter~\ref{chap:lit_study} presents a study of the literature regarding multirotor payload transportation, with a focus on suspended payloads and uncertain payload dynamics.
         
         \paragraph
-        Chapter~\ref{chap:modelling} contains a derivation of a mathematical model for the multirotor and suspended payload dynamics, which is used for simulations and for controller design.
+        Chapter~\ref{chap:modelling} contains a derivation of a mathematical model for the multirotor and suspended payload dynamics, which is used for simulations and controller design.
         
         \paragraph
         Chapter~\ref{chap:system_id} describes the baseline and the proposed system identification methods considered in this thesis. 
@@ -92,6 +92,6 @@
         \gls{HITL} results are also presented to test the controller algorithms with the practical hardware and software systems.
         
         \paragraph
-        Chapter~\ref{chap:conclusion} provides a summary of the work in this thesis. The major conclusions of this work is also presented and future recommendations are discussed.
+        Chapter~\ref{chap:conclusion} provides a summary of the work in this thesis. The major conclusions of this work are also presented and future recommendations are discussed.
 
 
