--- a/control/simulation_environment.tex
+++ b/control/simulation_environment.tex
@@ -1,7 +1,7 @@
 \FloatBarrier\section{Simulation Environment} \label{sec:simulation_environment}
 
     \paragraph
-    The controllers in this chapter are tested with a MATLAB/Simulink simulation environment.
+    The controllers in this chapter are tested within a MATLAB/Simulink simulation environment.
     This is used rather than the SITL and Gazebo simulation environment because it allows us to iterate designs faster.
     Simulink provides a graphical interface for control system design which enables us to change the control system design with ease.
     In contrast, the SITL and Gazebo simulation environment requires text-based control laws with C\texttt{++} and requires \gls{ROS} nodes to interface an \gls{MPC} with PX4.
@@ -13,9 +13,7 @@
     The resulting controllers are also applied in Simulink.
     Using the cascade \gls{PID} control architecture (discussed in the sections below), this simulation environment was verified against practical data with and without a payload.
     The plots in 
-    Figure~\ref{fig:prac_vs_sim_vel_step_no_payload}, 
-    Figure~\ref{fig:prac_vs_sim_vel_step_with_payload}, and
-    Figure~\ref{fig:prac_vs_sim_theta_with_payload} 
+    Figure~\ref{fig:prac_vs_sim_vel_step_no_payload}, \ref{fig:prac_vs_sim_vel_step_with_payload}, and \ref{fig:prac_vs_sim_theta_with_payload} 
     from Chapter~\ref{chap:modelling}
     show how well the simulations match the actual system dynamics.
     The controllers will therefore be designed, tested and compared using this simulation environment.
