--- a/control/plots/rootlocus_cl.tex
+++ b/control/plots/rootlocus_cl.tex
@@ -43,7 +43,7 @@
         0	0\\
         };
 
-        \addplot+[only marks, mark=o, mark options={solid, mycolor1}, style = solid,  forget plot]
+        \addplot+[only marks, mark=o, mark options={solid, mycolor1}, style = solid, thick,  forget plot]
           table[row sep=crcr]{%
         6.77962264341521e-16	3.13209195267317\\
         6.77962264341521e-16	-3.13209195267317\\
@@ -54,7 +54,7 @@
         };
         % \addlegendentry{Open loop zeros}
 
-        \addplot+[color=mycolor1, only marks, mark=x, mark options={solid, mycolor1}, style = solid, forget plot]
+        \addplot+[color=mycolor1, only marks, mark=x, mark options={solid, black}, style = solid, thick, forget plot]
           table[row sep=crcr]{%
         0	0\\
         0	0\\
@@ -67,7 +67,7 @@
         };
         % \addlegendentry{Open loop poles}
         
-        \addplot+[color=blue, style = solid, forget plot]
+        \addplot+[color=blue, style = solid, thick, forget plot]
           table[row sep=crcr]{%
         0	0\\
         -9.32246040892286e-05	0.00990567878862648\\
@@ -165,7 +165,7 @@
         -0.563508326896292	0\\
         };
         
-        \addplot+[color=mycolor2, style = solid, forget plot]
+        \addplot+[color=mycolor2, style = solid, thick, forget plot]
           table[row sep=crcr]{%
         -3.59932833650225	0\\
         -3.59932688489678	0\\
@@ -263,7 +263,7 @@
         -4.01084873037111	0\\
         };
         
-        \addplot+[color=mycolor3, style = solid, forget plot]
+        \addplot+[color=mycolor3, style = solid, thick, forget plot]
           table[row sep=crcr]{%
         -4.01084873036827	0\\
         -4.01084873036822	0\\
@@ -361,7 +361,7 @@
         -4.43649167310231	0\\
         };
         
-        \addplot+[color=mycolor4, style = solid,  forget plot]
+        \addplot+[color=mycolor4, style = solid, thick,  forget plot]
           table[row sep=crcr]{%
         2.63677968348475e-16	-3.32301249776487\\
         -1.31214832611581e-05	-3.32301038947714\\
@@ -459,7 +459,7 @@
         6.77962264341521e-16	-3.13209195267317\\
         };
         
-        \addplot+[color=red, style = solid,  forget plot]
+        \addplot+[color=red, style = solid, thick,  forget plot]
           table[row sep=crcr]{%
         2.63677968348475e-16	3.32301249776487\\
         -1.31214832611581e-05	3.32301038947714\\
@@ -557,7 +557,7 @@
         6.77962264341521e-16	3.13209195267317\\
         };
 
-        \addplot+[color=black!50!green, style = solid,  forget plot]
+        \addplot+[color=black!50!green, style = solid, thick,  forget plot]
           table[row sep=crcr]{%
         0	0\\
         -9.32246040892286e-05	-0.00990567878862648\\
@@ -655,7 +655,7 @@
         -3.72687109858774	0\\
         };
         
-        \addplot+[color=red, only marks, mark=square, mark options={solid, red}, style = solid, forget plot]
+        \addplot+[color=red, only marks, mark=square, mark options={solid, red}, style = solid, thick, forget plot]
           table[row sep=crcr]{%
         -15.5127260871559	7.75374247372119\\
         -15.5127260871559	-7.75374247372119\\
