--- a/control/diagrams/angular_rate_controller.tex
+++ b/control/diagrams/angular_rate_controller.tex
@@ -56,12 +56,12 @@
       \path(ref)+(\nodesep,0) node (ref_sum) [sum={}{+}{-}{}] {};
     %   \path(ref_sum)+(\nodesep,0) node (ctrl_k) [simple_block] {$K$};
       \path(ref_sum)+(2*\nodesep,0) node (ctrl_i) [sat_block_int, fill=light_blue, text centered, inner sep=0pt] {$~~\int$};
-      \path(ctrl_i)+(\nodesep,0) node (ctrl_i_gain) [simple_block] {$I_{\Omega_j}$};
+      \path(ctrl_i)+(\nodesep,0) node (ctrl_i_gain) [simple_block] {$I_{\Omega_X}$};
     %   \path(ref_sum)+(\nodesep,-1.5*\blockheight) node (ctrl_kd) [simple_block] {$K$};
       \path(ref_sum)+(\nodesep,-1.5*\blockheight) node (ctrl_d_filt) [simple_block] {LPF};
       \path(ref_sum)+(2*\nodesep,-1.5*\blockheight) node (ctrl_d) [simple_block] {$\frac{d}{dt}$};
-      \path(ctrl_d)+(\nodesep,0) node (ctrl_d_gain) [simple_block] {$D_{\Omega_j}$};
-      \path(ref_sum)+(3*\nodesep,1.5*\blockheight) node (ctrl_p_gain) [simple_block] {$P_{\Omega_j}$};
+      \path(ctrl_d)+(\nodesep,0) node (ctrl_d_gain) [simple_block] {$D_{\Omega_X}$};
+      \path(ref_sum)+(3*\nodesep,1.5*\blockheight) node (ctrl_p_gain) [simple_block] {$P_{\Omega_X}$};
       \path(ctrl_i_gain)+(\nodesep,0) node (ctrl_sum) [sum={+}{+}{-}{}] {};
       \path(ctrl_sum)+(\nodesep,0) node (sat_ctrl) [sat_block] {};
       \path(sat_ctrl.east)+(0.675*\nodesep,0) node (ctrl) [] {};
@@ -69,11 +69,11 @@
       \path(ref_sum.south |- ctrl_d_filt.west)+(-\nodesep,0) node(output) [] {};
   
       %===================================================================================
-      \path[draw,->] (ref.east) -- node[anchor=south, pos=0] {$\Omega_{j_{sp}}$} (ref_sum.west);
+      \path[draw,->] (ref.east) -- node[anchor=south, pos=0] {$\Omega_{B_{X,{sp}}}$} (ref_sum.west);
   
       \path[draw,->] (ref_sum.east) -- (ctrl_i.west);
     %   \path[draw,->] (ctrl_k.east) -- (ctrl_i.west);
-      \path[draw,->] (output.east) |- node[anchor=south, pos=0] {$\Omega_j$} (ctrl_d_filt.west);
+      \path[draw,->] (output.east) |- node[anchor=south, pos=0] {$\Omega_{B_X}$} (ctrl_d_filt.west);
     %   \path[draw,->] (ctrl_kd.east) -- (ctrl_d_filt.west);
       \path[draw,->] (output.east -| ref_sum.south) -- (ref_sum.south);
       \path[draw,->] ([xshift=0.65*\nodesep]ref_sum.east) |- (ctrl_p_gain.west);
@@ -84,7 +84,7 @@
       \path[draw,->] (ctrl_i_gain.east) -- (ctrl_sum.west);
       \path[draw,->] (ctrl_p_gain.east) -| (ctrl_sum.north);
       \path[draw,->] (ctrl_sum.east) -- (sat_ctrl.west);
-      \path[draw,->] (sat_ctrl.east) -- node[anchor=south] {$\delta_{j_{sp}}$} (ctrl.west);
+      \path[draw,->] (sat_ctrl.east) -- node[anchor=south] {$\delta_{E_{sp}}$} (ctrl.west);
     
     \end{tikzpicture}
 
