Finished editing control chapter according to willem review

--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -15,7 +15,7 @@
 
         \paragraph
         Existing solutions for stabilised multirotor control with a suspended payload were identified in the literature.
-        The literature study showed that studies seldomly include experimental results or algorithm testing on practical hardware.
+        The literature study showed that research seldomly includes experimental results or algorithm testing on practical hardware, even though this would provide valuable insight.
         It also showed that most studies do not account for uncertainty in the controlled system.
         A thorough study of the literature showed that some solutions account for parameter uncertainty, but very few assume no knowledge of the payload dynamics.
         
