--- a/results/results.tex
+++ b/results/results.tex
@@ -56,7 +56,7 @@
             \input{results/plots/cable_length_vs_train_time.tex}
 
             \paragraph 
-            Figure~\ref{fig:cable_length_vs_train_time} shows the \gls{PE} of the cable length estimation for practical flight data with different payload masses and cable lengths.
+            Figure~\ref{fig:cable_length_vs_train_time} shows the \gls{PE} of the cable length estimation for practical flight data with different payload masses and cable lengths using practical fligth data.
             Note that for each payload configuration, 
             the estimation converges to a constant error after a sufficient length of training data.
             %% ?? Add the length of training data required to all techniques to compare white-box length to black-box length
