--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -18,7 +18,7 @@
         \paragraph
         A \gls{SITL} implementation of the PX4 Autopilot \cite{Meier2015} using the Gazebo simulator \cite{Koenig2004} is used to generate data
         for system identification.
-        Testing these techniques with simulation data allows us to investigate a much larger range of system configurations 
+        Testing these techniques within simulations allows us to investigate a much larger range of system configurations 
         than possible with practical flights.
         The simulation model used in Gazebo was verified in Chapter~\ref{chap:modelling}.
         Using PX4 in \gls{SITL} also ensures that the controller dynamics in simulation 
